crates/buiy_verify/tests/snapshots/button.resting.forced.tablet.fc1.dpr2.cpu.snap
---
source: crates/buiy_verify/tests/coverage_layout.rs
expression: button.resting.forced.tablet.fc1.dpr2.cpu
---
# buiy-layout-dump v1
button pos=0,0 size=136,48
