crates/buiy_verify/tests/snapshots/button.resting.light.desktop.fc1.dpr1.cpu.snap
---
source: crates/buiy_verify/tests/coverage_layout.rs
expression: button.resting.light.desktop.fc1.dpr1.cpu
---
# buiy-layout-dump v1
button pos=0,0 size=136,48
